# nevermiss

./: .env.example  .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile.api  Dockerfile.worker  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  deps.py  main_api.py  main_worker.py
backend/app/api/: auth.py  billing.py  items.py  me.py  scan.py  settings.py  webhooks.py
backend/app/core/: crypto.py  db.py  errors.py  jwt.py  logging.py
backend/app/integrations/: dodo_client.py  gcal.py  gemini.py  gmail.py  resend_client.py  stripe_client.py
backend/app/models/: __init__.py  audit_log.py  dismissed_signature.py  item.py  scan_job.py  user.py
backend/app/prompts/: __init__.py  extraction.txt
backend/app/schemas/: __init__.py  common.py  item.py  scan.py  user.py
backend/app/services/: items.py  rate_limit.py  scan_queue.py  signatures.py  tier.py  urgency.py  users.py
backend/app/workers/: digest_cron.py  scan_runner.py  weekly_cron.py
backend/templates/: digest_html.j2  digest_plain.j2
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_billing.py  test_items.py  test_scan.py  test_settings.py
backend/tests/unit/: test_auth_session.py  test_crypto.py  test_digest_cron.py  test_gemini.py  test_gmail.py  test_item_dismiss.py  test_item_export.py  test_items_list.py  test_me.py  test_rate_limit.py  test_scan_queue.py  test_scan_runner.py  test_settings.py  test_signatures.py  test_tier.py  test_tier_rate_limit.py  test_urgency.py
(+30 files in other folders)
