[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nevermiss-backend"
version = "0.0.1"
description = "NeverMiss backend service"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.1,<2.0.0",
  "apscheduler>=3.10.4,<4.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "cryptography>=44.0.2,<45.0.0",
  "fastapi>=0.110.0,<1.0.0",
  "google-api-python-client>=2.169.0,<3.0.0",
  "google-auth-oauthlib>=1.2.2,<2.0.0",
  "google-generativeai>=0.8.5,<1.0.0",
  "pydantic>=2.11.3,<3.0.0",
  "PyJWT>=2.10.0,<3.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "resend>=2.10.0,<3.0.0",
  "sentry-sdk>=2.26.1,<3.0.0",
  "sqlalchemy[asyncio]>=2.0.40,<3.0.0",
  "stripe>=11.6.0,<12.0.0",
  "structlog>=25.2.0,<26.0.0",
  "tenacity>=9.1.2,<10.0.0",
  "uvicorn>=0.34.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "ruff>=0.11.5,<1.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["apscheduler.*", "google.*", "googleapiclient.*", "google_auth_oauthlib.*"]
ignore_missing_imports = true
